# Compiler-BUAACompileCourse

./: .gitignore  CMakeLists.txt  main.cpp  pack.bat  pack2.bat
include/: FlowGraph.h  IR.h  Lexer.h  Matcher.h  Parser.h  SymbolTable.h  ToMips.h  Token.h  init.h
include/homework/: error_homework.h  final.h  generate_homework.h  scanning_homework.h  syntactic_homework.h
src/: AST.cpp  Automaton.cpp  Error.cpp  FlowGraph.cpp  IR.cpp  Lexer.cpp  Matcher.cpp  Parser.cpp  SymbolTable.cpp  ToMips.cpp  Token.cpp  init.cpp
src/homework/: error_homework.cpp  final.cpp  generate_homework.cpp  scanning_homework.cpp  syntactic_homework.cpp
testfiles/: testfile1.txt  testfile2.txt  testfile3.txt
upload/: Error.cpp  IR.cpp  Parser.cpp  ToMips.cpp  error_homework.cpp  generate_homework.cpp  init.cpp  main.cpp  scanning_homework.cpp
upload/include/: AST.h  Automaton.h  Error.h  Parser.h  SymbolTable.h  Token.h  init.h
upload/include/homework/: error_homework.h
